...

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/ic_assignment_24px"
                    app:layout_constraintEnd_toStartOf="@id/activity_meeting_creator_editText_topic"
                    app:layout_constraintTop_toTopOf="@id/activity_meeting_creator_editText_topic"
                    app:layout_constraintBottom_toBottomOf="@id/activity_meeting_creator_editText_topic"
                    />

                <EditText
                    android:id="@+id/activity_meeting_creator_editText_topic"
...

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/ic_location_on_black_24dp"
                    app:layout_constraintEnd_toStartOf="@id/activity_meeting_creator_spinner_place"
                    app:layout_constraintTop_toTopOf="@id/activity_meeting_creator_spinner_place"
                    app:layout_constraintBottom_toBottomOf="@id/activity_meeting_creator_spinner_place"
                    />

                <Spinner
                    android:id="@+id/activity_meeting_creator_spinner_place"
...

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/ic_date_range_black_24dp"
                    app:layout_constraintEnd_toStartOf="@id/activity_meeting_creator_text_view_date"
                    app:layout_constraintTop_toTopOf="@id/activity_meeting_creator_text_view_date"
                    app:layout_constraintBottom_toBottomOf="@id/activity_meeting_creator_text_view_date"
                    />

                <TextView
                    android:id="@+id/activity_meeting_creator_text_view_date"
...

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/ic_access_time_black_24dp"
                    app:layout_constraintEnd_toStartOf="@id/activity_meeting_creator_text_view_hour"
                    app:layout_constraintTop_toTopOf="@id/activity_meeting_creator_text_view_hour"
                    app:layout_constraintBottom_toBottomOf="@id/activity_meeting_creator_text_view_hour"
                    />

                <TextView
                    android:id="@+id/activity_meeting_creator_text_view_hour"
...

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/ic_timer_black_24dp"
                    app:layout_constraintEnd_toStartOf="@id/activity_meeting_creator_text_view_duration"
                    app:layout_constraintTop_toTopOf="@id/activity_meeting_creator_text_view_duration"
                    app:layout_constraintBottom_toBottomOf="@id/activity_meeting_creator_text_view_duration"
                    />

                <TextView
                    android:id="@+id/activity_meeting_creator_text_view_duration"
...
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/ic_people_black_24dp"
                    app:layout_constraintEnd_toStartOf="@id/activity_meeting_creator_zone_add_members"
                    app:layout_constraintTop_toTopOf="@id/activity_meeting_creator_zone_add_members"
                    />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/activity_meeting_creator_zone_add_members"
                    android:layout_width="match_parent"
...

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/activity_meeting_creator_button_add_email"
                        app:layout_constraintStart_toStartOf="parent"
                        >

                        <MultiAutoCompleteTextView
                            android:id="@+id/activity_meeting_creator_multi_auto_complete_text_view_members"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Enter email"
                            android:inputType="textEmailAddress"
                            android:layout_marginEnd="16dp"
                            />
...
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <Button
                    android:id="@+id/activity_meeting_creator_button_cancellation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Annuler"
                    app:layout_constraintEnd_toStartOf="@+id/activity_meeting_creator_button_validation"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:elevation="4dp"
                    android:layout_margin="16dp"
                    android:background="@drawable/background_rounded_corners"
...
