<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.MeetingsListActivity"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        >

        <include
            android:id="@+id/activity_meetings_list_toolbar"
            layout="@layout/custom_toolbar"
            />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior = "@string/appbar_scrolling_view_behavior"
        >

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            android:overScrollMode="never"
            >
            <com.google.android.material.chip.ChipGroup
                android:id="@+id/activity_meetings_list_chip_group_filters"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:singleLine="true"
                />

        </HorizontalScrollView>

        <include layout="@layout/recyclerview_meetings_list" />

    </LinearLayout>

    <TextView
        android:id="@+id/activity_meetings_list_txt_empty_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="Aucune réunion disponible"
        android:visibility="invisible"
        app:layout_behavior = "@string/appbar_scrolling_view_behavior"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/activity_meetings_list_btn_add_meeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="16dp"
        app:srcCompat="@drawable/ic_add_black_24dp"
        app:backgroundTint="@color/colorPrimary"
        app:tint="@color/white"
        app:elevation="6dp"
        />

</androidx.coordinatorlayout.widget.CoordinatorLayout>