<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:icon="@drawable/ic_filter_list_white_24dp"
        app:showAsAction="always"
        android:title=""
        >

        <menu>
            <item
                android:id="@+id/menu_filter_place"
                android:title="Filtre par salle"
                app:showAsAction="never"
                />

            <item
                android:id="@+id/menu_filter_date"
                android:title="Filtre par date"
                app:showAsAction="never"
                />

        </menu>

    </item>

</menu>