<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_location_on_black_24dp"
        app:layout_constraintEnd_toStartOf="@id/fragment_dialog_filter_place_spinner_place"
        app:layout_constraintTop_toTopOf="@id/fragment_dialog_filter_place_spinner_place"
        app:layout_constraintBottom_toBottomOf="@id/fragment_dialog_filter_place_spinner_place"
        />

    <Spinner
        android:id="@+id/fragment_dialog_filter_place_spinner_place"
        style="@android:style/Widget.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Lieu"
        android:layout_marginTop="16dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>